never add empty lists in KateCodeFolding

this was the implicit assumption already but did not
work properly under some conditions, esp. adding a newline
at the end of a line, which would trigger the insertion of
an empty list for the newly inserted line

BUG: 287291